# algo-account-watcher

./: .gitignore  LICENSE  README.md  docker-compose.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/api/: __init__.py  config.py  db.py  main.py  tasks.py  utils.py
backend/api/models/: __init__.py  account.py  notification.py
backend/api/routes/: __init__.py  addresses.py  notifications.py
backend/data/: db-test.sqlite3  db.sqlite3-shm  db.sqlite3-wal
backend/tests/: __init__.py  conftest.py  test_ping.py  test_utils.py
backend/tests/routes_tests/: __init__.py  test_address_endpoints.py  test_notification_endpoints.py
frontend/: README.md  index.html  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/coverage/: clover.xml  coverage-final.json  index.html
frontend/coverage/frontend/: index.html  postcss.config.mjs.html  tailwind.config.ts.html
frontend/coverage/frontend/src/: App.tsx.html  Container.tsx.html  index.html  (+2 more)
frontend/public/: maintenance.html
frontend/src/: AccountBar.tsx  AddressInput.tsx  App.tsx  Container.tsx  Navbar.tsx  RefreshAddresses.tsx  WatchedAddresses.tsx  constants.ts  types.ts
frontend/src/components/: AccountBar.tsx  AccountHistory.tsx  AddressInput.tsx  ComponentErrorBoundary.tsx  HelpText.tsx  Navbar.tsx  NotificationTable.tsx  RefreshAddresses.tsx  WatchedAddresses.tsx  api.ts
frontend/src/deploy/: Dockerfile.dev  Dockerfile.prod  nginx.conf
frontend/src/scripts/: setupProxy.ts
frontend/src/utils/: test-utils.tsx
(+18 files in other folders)
